--- a/internal/mailer/templates/user_welcome.tmpl
+++ b/internal/mailer/templates/user_welcome.tmpl
@@ -3,7 +3,7 @@
 {{define "plainBody"}}
 Hi {{.FirstName}},
 
-Thanks for signing up for {{.AppName}} account. We're excited to have you on board.
+Thanks for signing up for your {{.AppName}} account. We're excited to have you on board.
 
 Thanks,
 
@@ -13,19 +13,106 @@ The {{.AppName}} Team
 {{define "htmlBody"}}
 <!doctype html>
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width" />
-    <meta http-equiv="Content-Type" content="text/html;  charset=UTF-8" />
-  </head>
+  <head>
+    <meta name="viewport" content="width=device-width" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Welcome to {{.AppName}}!</title>
+    <style>
+      /* Reset */
+      body {
+        background-color: #f6f6f6;
+        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+        -webkit-font-smoothing: antialiased;
+        font-size: 16px;
+        line-height: 1.6;
+        margin: 0;
+        padding: 0;
+      }
 
-  <body>
-    <p>Hi {{.FirstName}},</p>
-    <p>
-      Thanks for signing up for {{.AppName}} account. We're excited to have you
-      on board.
-    </p>
-    <p>Thanks,</p>
-    <p>The {{.AppName}} Team</p>
-  </body>
+      table {
+        border-collapse: separate;
+        width: 100%;
+      }
+
+      .body {
+        background-color: #f6f6f6;
+        width: 100%;
+      }
+
+      .container {
+        display: block;
+        margin: 0 auto !important;
+        max-width: 580px;
+        padding: 10px;
+        width: 580px;
+      }
+
+      .content {
+        background: #ffffff;
+        border-radius: 5px;
+        padding: 30px;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.05);
+      }
+
+      h1 {
+        color: #333333;
+        font-weight: 600;
+        text-align: center;
+        margin-bottom: 25px;
+      }
+
+      p {
+        color: #555555;
+        font-size: 16px;
+        margin-bottom: 15px;
+      }
+
+      .footer {
+        text-align: center;
+        margin-top: 20px;
+        font-size: 12px;
+        color: #999999;
+      }
+
+      a {
+        color: #1a73e8;
+        text-decoration: none;
+      }
+
+      .button {
+        display: inline-block;
+        background-color: #1a73e8;
+        color: #ffffff !important;
+        padding: 10px 20px;
+        border-radius: 4px;
+        text-decoration: none;
+        margin-top: 15px;
+      }
+    </style>
+  </head>
+
+  <body>
+    <table class="body">
+      <tr>
+        <td></td>
+        <td class="container">
+          <div class="content">
+            <h1>Welcome to {{.AppName}}!</h1>
+            <p>Hi {{.FirstName}},</p>
+            <p>
+              Thanks for signing up for your <strong>{{.AppName}}</strong> account.
+              We're excited to have you on board.
+            </p>
+            <p>Thanks,<br>The {{.AppName}} Team</p>
+          </div>
+
+          <div class="footer">
+            <p>&copy; {{.Year}} {{.AppName}}. All rights reserved.</p>
+          </div>
+        </td>
+        <td></td>
+      </tr>
+    </table>
+  </body>
 </html>
 {{end}}
