--- a/internal/mailer/templates/user_welcome.tmpl
+++ b/internal/mailer/templates/user_welcome.tmpl
@@ -5,6 +5,10 @@ Hi {{.FirstName}},
 
 Thanks for signing up for your {{.AppName}} account. We're excited to have you on board.
 
+Please send a request to the `PUT /api/v1/user/activated` endpoint with the following JSON body to activate your account:
+{"token": "{{.ActivationToken}}"}
+Please note that this is a one-time use token and it will expire in 24 hours.
+
 Thanks,
 
 The {{.AppName}} Team
@@ -102,6 +106,16 @@ The {{.AppName}} Team
             <p>
               Thanks for signing up for your <strong>{{.AppName}}</strong> account.
               We're excited to have you on board.
+            </p>
+            <p>
+              Please send a request to the `PUT /api/v1/user/activated` endpoint with the following JSON body to activate your account:
+            </p>
+            <pre>
+              <code>
+                {"token": "{{.ActivationToken}}"}
+              </code>
+            </pre>
+            <p>Please note that this is a one-time use token and it will expire in 24 hours.
             </p>
             <p>Thanks,<br>The {{.AppName}} Team</p>
           </div>
